# AI-used-car-recommender

./: .gitmessage.txt  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: main.py
app/api/: recommend.py
app/crawler/: encar_client.py  encar_client_ban.py
app/db/: car_lines.json  dummy_data.py  models.py  seed.py  session.py
app/repositories/: car_repository.py  price_repository.py
app/schemas/: request.py  response.py
app/services/: agent_graph.py  car_logic.py  llm_service.py  recommendation_service.py  recommender.py
docker/postgres/: init.sql
frontend/: app.py
